Now reading jobs from Yaml file and creating them programmatically in the ExecutionController ; Next step is too catch copy action in the scheduler (along with already caught read / write actions) so that we can fully model a first 'standard' compound job for each job in the YAML file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 message(STATUS "Cmake version ${CMAKE_MAJOR_VERSION}.${CMAKE_MINOR_VERSION}.${CMAKE_PATCH_VERSION}")
 
-project(my-wrench-simulator)
+project(storalloc_wrench)
 
 add_definitions("-Wall -Wno-unused-variable -Wno-unused-private-field")
 
@@ -19,33 +19,37 @@ include_directories(include/ /usr/local/include /opt/local/include /usr/local/in
 set(SOURCE_FILES
         include/Controller.h
         include/Platform.h
+        include/JobDefinition.h
         src/Controller.cpp
         src/Simulator.cpp
         src/Platform.cpp
-        )
+)
 
 # wrench library and dependencies
 find_library(WRENCH_LIBRARY NAMES wrench)
+find_library(YAML_CPP_LIBRARY NAMES yaml-cpp)
 #find_library(WRENCH_PEGASUS_WORKFLOW_PARSER_LIBRARY NAMES wrenchpegasusworkflowparser)
 #find_library(PUGIXML_LIBRARY NAMES pugixml)
 
 # generating the executable
-add_executable(my-wrench-simulator ${SOURCE_FILES})
+add_executable(storalloc_wrench ${SOURCE_FILES})
 
 if (ENABLE_BATSCHED)
-    target_link_libraries(my-wrench-simulator
+    target_link_libraries(storalloc_wrench
             ${WRENCH_LIBRARY}
 #            ${WRENCH_PEGASUS_WORKFLOW_PARSER_LIBRARY}
             ${SimGrid_LIBRARY}
             ${PUGIXML_LIBRARY}
+            ${YAML_CPP_LIBRARY}
             -lzmq )
 else()
-    target_link_libraries(my-wrench-simulator
+    target_link_libraries(storalloc_wrench
             ${WRENCH_LIBRARY}
 #            ${WRENCH_PEGASUS_WORKFLOW_PARSER_LIBRARY}
             ${SimGrid_LIBRARY}
             ${PUGIXML_LIBRARY}
+            ${YAML_CPP_LIBRARY}
             )
 endif()
 
-install(TARGETS my-wrench-simulator DESTINATION bin)
+install(TARGETS storalloc_wrench DESTINATION bin)
