--- a/config.yml
+++ b/config.yml
@@ -6,29 +6,29 @@ general:
   config_name: StorAlloc_Test
 storage:
   disk_templates:
-    - &HDD_Capa1
-      id: HDD_Capa1
+    - &hdd_capa
+      id: hdd_capa
       capacity: 2000  # GB
       read_bw: 100    # MBps
       write_bw: 50    # MBps
       mount_prefix: /dev/hdd
-    - &SSD_Perf1
-      id: SSD_Perf1
+    - &ssd_perf
+      id: ssd_perf
       capacity: 960  # GB
       read_bw: 1000    # MBps
       write_bw: 500    # MBps
       mount_prefix: /dev/ssd
   node_templates:
-    - &NodeCapa1
+    - &node_capa
       id: Capacity
       disks:
         - quantity: 4
-          template: *HDD_Capa1
+          template: *hdd_capa
         - quantity: 1
-          template: *SSD_Perf1
+          template: *ssd_perf
   nodes:
     - quantity: 5
-      template: *NodeCapa1
+      template: *node_capa
 dragonfly:
   groups: 2       # Entire Dragonfly zone
   group_links: 2
