--- a/IOJobs_1.yml
+++ b/IOJobs_1.yml
@@ -9,4 +9,4 @@ jobs:
   startTime: '2020-10-01 20:22:29'
   submissionTime: '2020-09-30 19:55:49'
   waitingTime: 1 days 00:26:40
-  writtenBytes: 0
+  writtenBytes: 5000000000
