--- a/bokeh_server/storage_service_operations.yml
+++ b/bokeh_server/storage_service_operations.yml
@@ -1,400 +1,440 @@
 ---
-- ts: 1600351016.0073028
+- ts: 1600351016.0532868
   action_type: FILECOPY
   action_name: stagingCopy_467890
+  action_job: 467890
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 4603
+  volume_change_bytes: 4603000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 4603
+  total_used_volume_bytes_server: 4603000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 4603
-- ts: 1600351296.0125501
+  total_used_volume_bytes_disk: 4603000
+- ts: 1600351296.1317909
   action_type: FILEWRITE
+  action_job: 467890
   action_name: fWrite_467890
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 2730
+  volume_change_bytes: 2730000
   total_allocation_server: 2
-  total_used_volume_bytes_server: 7333
+  total_used_volume_bytes_server: 7333000
   total_allocation_disk: 2
-  total_used_volume_bytes_disk: 7333
-- ts: 1600351296.0179355
+  total_used_volume_bytes_disk: 7333000
+- ts: 1600351297.1650212
   action_type: FILEDELETE
   action_name: delRF_467890
+  action_job: 467890
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 4603
+  volume_change_bytes: 4603000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 2730
+  total_used_volume_bytes_server: 2730000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 2730
-- ts: 1600351296.0214036
+  total_used_volume_bytes_disk: 2730000
+- ts: 1600351298.1690617
   action_type: FILEDELETE
   action_name: delWF_467890
+  action_job: 467890
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 2730
+  volume_change_bytes: 2730000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600357797.0072749
+- ts: 1600357797.0254169
   action_type: FILECOPY
   action_name: stagingCopy_467943
+  action_job: 467943
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1816
+  volume_change_bytes: 1816000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 1816
+  total_used_volume_bytes_server: 1816000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1816
-- ts: 1600358130.3458123
+  total_used_volume_bytes_disk: 1816000
+- ts: 1600358130.3942242
   action_type: FILEWRITE
+  action_job: 467943
   action_name: fWrite_467943
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 1214
+  volume_change_bytes: 1214000
   total_allocation_server: 2
-  total_used_volume_bytes_server: 3030
+  total_used_volume_bytes_server: 3030000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1214
-- ts: 1600358130.3511825
+  total_used_volume_bytes_disk: 1214000
+- ts: 1600358131.4122946
   action_type: FILEDELETE
   action_name: delRF_467943
+  action_job: 467943
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1816
+  volume_change_bytes: 1816000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 1214
+  total_used_volume_bytes_server: 1214000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600358130.3546505
+- ts: 1600358132.4163351
   action_type: FILEDELETE
   action_name: delWF_467943
+  action_job: 467943
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 1214
+  volume_change_bytes: 1214000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511206.0076005
+- ts: 1600511206.0984137
   action_type: FILECOPY
   action_name: stagingCopy_468394-1
+  action_job: 468394-1
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 3142
+  volume_change_bytes: 3142000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 3142
+  total_used_volume_bytes_server: 3142000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 3142
-- ts: 1600511506.0128226
+  total_used_volume_bytes_disk: 3142000
+- ts: 1600511506.1860909
   action_type: FILEWRITE
+  action_job: 468394-1
   action_name: fWrite_468394-1
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1667
+  volume_change_bytes: 1667000
   total_allocation_server: 2
-  total_used_volume_bytes_server: 4809
+  total_used_volume_bytes_server: 4809000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1667
-- ts: 1600511506.0181973
+  total_used_volume_bytes_disk: 1667000
+- ts: 1600511507.2086914
   action_type: FILEDELETE
   action_name: delRF_468394-1
+  action_job: 468394-1
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 3142
+  volume_change_bytes: 3142000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 1667
+  total_used_volume_bytes_server: 1667000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511506.0216737
+- ts: 1600511508.2127318
   action_type: FILEDELETE
   action_name: delWF_468394-1
+  action_job: 468394-1
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1667
+  volume_change_bytes: 1667000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511206.0129666
+- ts: 1600511206.1653905
   action_type: FILECOPY
   action_name: stagingCopy_468394-2
+  action_job: 468394-2
   storage_service: simple_storage_0_5000
-  disk: /dev/ssd0
-  volume_change_bytes: 4710
+  disk: /dev/hdd4
+  volume_change_bytes: 4710000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 4710
+  total_used_volume_bytes_server: 4710000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 4710
-- ts: 1600511506.0181975
+  total_used_volume_bytes_disk: 4710000
+- ts: 1600511506.2497411
   action_type: FILEWRITE
+  action_job: 468394-2
   action_name: fWrite_468394-2
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd0
-  volume_change_bytes: 1604
-  total_allocation_server: 1
-  total_used_volume_bytes_server: 1604
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd5
+  volume_change_bytes: 1604000
+  total_allocation_server: 2
+  total_used_volume_bytes_server: 6314000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1604
-- ts: 1600511506.0235798
+  total_used_volume_bytes_disk: 1604000
+- ts: 1600511507.2717116
   action_type: FILEDELETE
   action_name: delRF_468394-2
+  action_job: 468394-2
   storage_service: simple_storage_0_5000
-  disk: /dev/ssd0
-  volume_change_bytes: 4710
-  total_allocation_server: 0
-  total_used_volume_bytes_server: 0
+  disk: /dev/hdd4
+  volume_change_bytes: 4710000
+  total_allocation_server: 1
+  total_used_volume_bytes_server: 1604000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511506.0270479
+- ts: 1600511508.2757521
   action_type: FILEDELETE
   action_name: delWF_468394-2
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd0
-  volume_change_bytes: 1604
+  action_job: 468394-2
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd5
+  volume_change_bytes: 1604000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511206.0215781
+- ts: 1600511206.1130428
   action_type: FILECOPY
   action_name: stagingCopy_468394-3
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd0
-  volume_change_bytes: 3145
+  action_job: 468394-3
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd5
+  volume_change_bytes: 3145000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 3145
+  total_used_volume_bytes_server: 3145000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 3145
-- ts: 1600511539.3601899
+  total_used_volume_bytes_disk: 3145000
+- ts: 1600511539.588326
   action_type: FILEWRITE
+  action_job: 468394-3
   action_name: fWrite_468394-3
-  storage_service: simple_storage_2_5006
-  disk: /dev/hdd1
-  volume_change_bytes: 7320
-  total_allocation_server: 1
-  total_used_volume_bytes_server: 7320
+  storage_service: simple_storage_0_5000
+  disk: /dev/ssd3
+  volume_change_bytes: 7320000
+  total_allocation_server: 2
+  total_used_volume_bytes_server: 10465000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 7320
-- ts: 1600511539.3656211
+  total_used_volume_bytes_disk: 7320000
+- ts: 1600511540.6546276
   action_type: FILEDELETE
   action_name: delRF_468394-3
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd0
-  volume_change_bytes: 3145
-  total_allocation_server: 0
-  total_used_volume_bytes_server: 0
+  action_job: 468394-3
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd5
+  volume_change_bytes: 3145000
+  total_allocation_server: 1
+  total_used_volume_bytes_server: 7320000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511539.3690891
+- ts: 1600511541.658668
   action_type: FILEDELETE
   action_name: delWF_468394-3
-  storage_service: simple_storage_2_5006
-  disk: /dev/hdd1
-  volume_change_bytes: 7320
+  action_job: 468394-3
+  storage_service: simple_storage_0_5000
+  disk: /dev/ssd3
+  volume_change_bytes: 7320000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511206.0251451
+- ts: 1600511206.1159139
   action_type: FILECOPY
   action_name: stagingCopy_468394-4
+  action_job: 468394-4
   storage_service: simple_storage_0_5000
-  disk: /dev/ssd0
-  volume_change_bytes: 3145
+  disk: /dev/hdd4
+  volume_change_bytes: 3145000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 3145
+  total_used_volume_bytes_server: 3145000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 3145
-- ts: 1600511606.0304222
+  total_used_volume_bytes_disk: 3145000
+- ts: 1600511606.2735081
   action_type: FILEWRITE
+  action_job: 468394-4
   action_name: fWrite_468394-4
   storage_service: simple_storage_0_5000
   disk: /dev/hdd2
-  volume_change_bytes: 7549
+  volume_change_bytes: 7549000
   total_allocation_server: 2
-  total_used_volume_bytes_server: 10694
+  total_used_volume_bytes_server: 10694000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 7549
-- ts: 1600511606.0358558
+  total_used_volume_bytes_disk: 7549000
+- ts: 1600511607.3549285
   action_type: FILEDELETE
   action_name: delRF_468394-4
+  action_job: 468394-4
   storage_service: simple_storage_0_5000
-  disk: /dev/ssd0
-  volume_change_bytes: 3145
+  disk: /dev/hdd4
+  volume_change_bytes: 3145000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 7549
+  total_used_volume_bytes_server: 7549000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600511606.0393238
+- ts: 1600511608.358969
   action_type: FILEDELETE
   action_name: delWF_468394-4
+  action_job: 468394-4
   storage_service: simple_storage_0_5000
   disk: /dev/hdd2
-  volume_change_bytes: 7549
+  volume_change_bytes: 7549000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600577299.0192595
+- ts: 1600577299.0354877
   action_type: FILECOPY
   action_name: stagingCopy_468490
+  action_job: 468490
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1982
+  volume_change_bytes: 1982000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 1982
+  total_used_volume_bytes_server: 1982000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1982
-- ts: 1600577699.0244677
+  total_used_volume_bytes_disk: 1982000
+- ts: 1600577699.0750716
   action_type: FILEWRITE
+  action_job: 468490
   action_name: fWrite_468490
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd0
-  volume_change_bytes: 1459
-  total_allocation_server: 1
-  total_used_volume_bytes_server: 1459
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd5
+  volume_change_bytes: 1459000
+  total_allocation_server: 2
+  total_used_volume_bytes_server: 3441000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1459
-- ts: 1600577699.0298402
+  total_used_volume_bytes_disk: 1459000
+- ts: 1600577700.095592
   action_type: FILEDELETE
   action_name: delRF_468490
+  action_job: 468490
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1982
-  total_allocation_server: 0
-  total_used_volume_bytes_server: 0
+  volume_change_bytes: 1982000
+  total_allocation_server: 1
+  total_used_volume_bytes_server: 1459000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600577699.0333083
+- ts: 1600577701.0996325
   action_type: FILEDELETE
   action_name: delWF_468490
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd0
-  volume_change_bytes: 1459
+  action_job: 468490
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd5
+  volume_change_bytes: 1459000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600634547.0177765
+- ts: 1600634547.0355024
   action_type: FILECOPY
   action_name: stagingCopy_468525-5
+  action_job: 468525-5
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1066
+  volume_change_bytes: 1066000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 1066
+  total_used_volume_bytes_server: 1066000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1066
-- ts: 1600634947.0241783
+  total_used_volume_bytes_disk: 1066000
+- ts: 1600634947.0719452
   action_type: FILEWRITE
+  action_job: 468525-5
   action_name: fWrite_468525-5
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 1387
+  volume_change_bytes: 1387000
   total_allocation_server: 2
-  total_used_volume_bytes_server: 2453
+  total_used_volume_bytes_server: 2453000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1387
-- ts: 1600634947.0295501
+  total_used_volume_bytes_disk: 1387000
+- ts: 1600634948.0917456
   action_type: FILEDELETE
   action_name: delRF_468525-5
+  action_job: 468525-5
   storage_service: simple_storage_0_5000
   disk: /dev/hdd1
-  volume_change_bytes: 1066
+  volume_change_bytes: 1066000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 1387
+  total_used_volume_bytes_server: 1387000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600634947.0330181
+- ts: 1600634949.0957861
   action_type: FILEDELETE
   action_name: delWF_468525-5
+  action_job: 468525-5
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 1387
+  volume_change_bytes: 1387000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600634547.0213487
+- ts: 1600634547.0411923
   action_type: FILECOPY
   action_name: stagingCopy_468525-6
+  action_job: 468525-6
   storage_service: simple_storage_0_5000
-  disk: /dev/hdd2
-  volume_change_bytes: 1045
+  disk: /dev/hdd0
+  volume_change_bytes: 1045000
   total_allocation_server: 1
-  total_used_volume_bytes_server: 1045
+  total_used_volume_bytes_server: 1045000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1045
-- ts: 1600635547.0265436
+  total_used_volume_bytes_disk: 1045000
+- ts: 1600635547.0773401
   action_type: FILEWRITE
+  action_job: 468525-6
   action_name: fWrite_468525-6
   storage_service: simple_storage_0_5000
-  disk: /dev/hdd0
-  volume_change_bytes: 1042
+  disk: /dev/hdd2
+  volume_change_bytes: 1042000
   total_allocation_server: 2
-  total_used_volume_bytes_server: 2087
+  total_used_volume_bytes_server: 2087000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1042
-- ts: 1600635547.0319121
+  total_used_volume_bytes_disk: 1042000
+- ts: 1600635548.0936906
   action_type: FILEDELETE
   action_name: delRF_468525-6
-  storage_service: simple_storage_0_5000
-  disk: /dev/hdd2
-  volume_change_bytes: 1045
-  total_allocation_server: 1
-  total_used_volume_bytes_server: 1042
-  total_allocation_disk: 0
-  total_used_volume_bytes_disk: 0
-- ts: 1600635547.0353801
-  action_type: FILEDELETE
-  action_name: delWF_468525-6
+  action_job: 468525-6
   storage_service: simple_storage_0_5000
   disk: /dev/hdd0
-  volume_change_bytes: 1042
+  volume_change_bytes: 1045000
+  total_allocation_server: 1
+  total_used_volume_bytes_server: 1042000
+  total_allocation_disk: 0
+  total_used_volume_bytes_disk: 0
+- ts: 1600635549.0977311
+  action_type: FILEDELETE
+  action_name: delWF_468525-6
+  action_job: 468525-6
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd2
+  volume_change_bytes: 1042000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600634547.0263951
+- ts: 1600634547.043014
   action_type: FILECOPY
   action_name: stagingCopy_468525-7
+  action_job: 468525-7
+  storage_service: simple_storage_0_5000
+  disk: /dev/ssd0
+  volume_change_bytes: 1054000
+  total_allocation_server: 1
+  total_used_volume_bytes_server: 1054000
+  total_allocation_disk: 1
+  total_used_volume_bytes_disk: 1054000
+- ts: 1600635147.0783982
+  action_type: FILEWRITE
+  action_job: 468525-7
+  action_name: fWrite_468525-7
   storage_service: simple_storage_0_5000
   disk: /dev/hdd2
-  volume_change_bytes: 1054
-  total_allocation_server: 1
-  total_used_volume_bytes_server: 1054
+  volume_change_bytes: 1050000
+  total_allocation_server: 2
+  total_used_volume_bytes_server: 2104000
   total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1054
-- ts: 1600635147.03159
-  action_type: FILEWRITE
-  action_name: fWrite_468525-7
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd3
-  volume_change_bytes: 1050
-  total_allocation_server: 1
-  total_used_volume_bytes_server: 1050
-  total_allocation_disk: 1
-  total_used_volume_bytes_disk: 1050
-- ts: 1600635147.0369585
+  total_used_volume_bytes_disk: 1050000
+- ts: 1600635148.0948286
   action_type: FILEDELETE
   action_name: delRF_468525-7
+  action_job: 468525-7
   storage_service: simple_storage_0_5000
-  disk: /dev/hdd2
-  volume_change_bytes: 1054
-  total_allocation_server: 0
-  total_used_volume_bytes_server: 0
+  disk: /dev/ssd0
+  volume_change_bytes: 1054000
+  total_allocation_server: 1
+  total_used_volume_bytes_server: 1050000
   total_allocation_disk: 0
   total_used_volume_bytes_disk: 0
-- ts: 1600635147.0404265
+- ts: 1600635149.0988691
   action_type: FILEDELETE
   action_name: delWF_468525-7
-  storage_service: simple_storage_1_5003
-  disk: /dev/hdd3
-  volume_change_bytes: 1050
+  action_job: 468525-7
+  storage_service: simple_storage_0_5000
+  disk: /dev/hdd2
+  volume_change_bytes: 1050000
   total_allocation_server: 0
   total_used_volume_bytes_server: 0
   total_allocation_disk: 0
