Updating both Config and Job definitions in simulator to take into account new data / parameters for our runs. Slowly fixing the jobs model using the new data in order to make them slightly more realistic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ find_package(SimGrid REQUIRED)
 find_package(Boost REQUIRED)
 
 # include directories for dependencies and WRENCH libraries
-include_directories(include/ /usr/local/include /opt/local/include /usr/local/include/wrench ${SimGrid_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
+include_directories(include/ /usr/local/include /opt/local/include /opt/local/include/simgrid /usr/local/include/wrench ${SimGrid_INCLUDE_DIR} ${Boost_INCLUDE_DIR})
 
 # source files
 set(SOURCE_FILES
