Fixing tests and configs/test data (2 tests to go) after changing the striping parameters selection in the Lustre Allocator (which also needs double checking to make sure we are not allocating to much each time).

--- a/configs/test_config.yml
+++ b/configs/test_config.yml
@@ -8,6 +8,7 @@ general:
   permanent_storage_read_bw: 10000MBps
   permanent_storage_write_bw: 10000MBps
   permanent_storage_capacity: 10000TB
+  preload_percent: 0
 storage:
   disk_templates:
     - &hdd_capa
