--- a/configs/std_config.yml
+++ b/configs/std_config.yml
@@ -5,6 +5,10 @@ general:
   config_version: 0.0.1
   config_name: StorAlloc_Std
   max_stripe_size: 960000000000    # Max size for allocation stripes (in bytes)
+  permanent_storage_read_bw: 10000MBps
+  permanent_storage_write_bw: 10000MBps
+  permanent_storage_capacity: 10000TB
+  preload_percent: 0
 storage:
   disk_templates:
     - &hdd_capa
