Fixing tests and cleaning up some parts of the code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,9 @@ set(STORALLOC_VERSION_EXTRA "dev")
 
 add_definitions("-Wall -Wno-unused-variable -Wno-unused-private-field")
 
-
+if (ENABLE_BATSCHED)
+    add_definitions(-DENABLE_BATSCHED)
+endif ()
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules/")
 
@@ -41,11 +43,10 @@ set(SOURCE_FILES
         src/Utils.cpp
 )
 
-# wrench library and dependencies
+# Wrench library and dependencies
 find_library(WRENCH_LIBRARY NAMES wrench)
 find_library(YAML_CPP_LIBRARY NAMES yaml-cpp)
-#find_library(WRENCH_PEGASUS_WORKFLOW_PARSER_LIBRARY NAMES wrenchpegasusworkflowparser)
-#find_library(PUGIXML_LIBRARY NAMES pugixml)
+find_library(ZMQ_LIBRARY NAMES zmq)
 
 # generating the executable
 set(CMAKE_CXX_STANDARD 17)
@@ -54,19 +55,16 @@ add_executable(storalloc_wrench src/main.cpp ${SOURCE_FILES})
 if (ENABLE_BATSCHED)
     target_link_libraries(storalloc_wrench
             ${WRENCH_LIBRARY}
-#            ${WRENCH_PEGASUS_WORKFLOW_PARSER_LIBRARY}
             ${SimGrid_LIBRARY}
-            ${PUGIXML_LIBRARY}
+            ${ZMQ_LIBRARY}
             ${YAML_CPP_LIBRARY}
-            -lzmq )
+    )
 else()
     target_link_libraries(storalloc_wrench
             ${WRENCH_LIBRARY}
-#            ${WRENCH_PEGASUS_WORKFLOW_PARSER_LIBRARY}
             ${SimGrid_LIBRARY}
-            ${PUGIXML_LIBRARY}
             ${YAML_CPP_LIBRARY}
-            )
+    )
 endif()
 
 install(TARGETS storalloc_wrench DESTINATION bin)
@@ -86,13 +84,26 @@ if(GTEST_LIBRARY)
     test/UtilsTest.cpp
     test/include/TestWithFork.h
     test/include/UniqueTmpPathPrefix.h
+    test/include/TestConstants.h
     ${SOURCE_FILES}
   )
-  target_link_libraries(
-    unit_tests
-    ${GTEST_LIBRARY}
-    ${WRENCH_LIBRARY} ${SimGrid_LIBRARY} ${PUGIXML_LIBRARY} ${YAML_CPP_LIBRARY}
+  if (ENABLE_BATSCHED)
+    target_link_libraries(unit_tests
+      ${GTEST_LIBRARY}
+      ${WRENCH_LIBRARY}
+      ${SimGrid_LIBRARY}
+      ${ZMQ_LIBRARY}
+      ${YAML_CPP_LIBRARY}
   )
+  else()
+    target_link_libraries(unit_tests
+      ${GTEST_LIBRARY}
+      ${WRENCH_LIBRARY}
+      ${SimGrid_LIBRARY}
+      ${YAML_CPP_LIBRARY}
+    )
+  endif()
+
 
   set_target_properties(unit_tests PROPERTIES COMPILE_FLAGS "-g -O0 --coverage")
   set_target_properties(unit_tests PROPERTIES LINK_FLAGS "--coverage")
