--- a/configs/std_config.yml
+++ b/configs/std_config.yml
@@ -9,6 +9,16 @@ general:
   permanent_storage_write_bw: 10000MBps
   permanent_storage_capacity: 10000TB
   preload_percent: 0
+  amdahl: 0.5                         # From 0 to 1, degree of // in compute tasks
+  walltime_extension: 1.2             # The final walltime passed to the batch sched will be walltime * walltime_extension
+  non_linear_coef_read: 0.9
+  non_linear_coef_write: 0.6
+  read_variability: 1.0
+  write_variability: 0.8
+  nb_files_per_read: 2
+  nb_files_per_write: 2
+  io_read_node_ratio: 0.1
+  io_write_node_ratio: 0.1
 storage:
   disk_templates:
     - &hdd_capa
