--- a/configs/test_configs/lustre_config_3OSS_3OST.yml
+++ b/configs/test_configs/lustre_config_3OSS_3OST.yml
@@ -22,6 +22,10 @@ general:
   non_linear_coef_write: 0.6
   read_variability: 1.0
   write_variability: 0.8
+  nb_files_per_read: 2
+  nb_files_per_write: 2
+  io_read_node_ratio: 0.1
+  io_write_node_ratio: 0.1
 storage:
   disk_templates:
     - &raid_OSS
