--- a/configs/test_configs/rr_config.yml
+++ b/configs/test_configs/rr_config.yml
@@ -15,6 +15,10 @@ general:
   non_linear_coef_write: 0.6
   read_variability: 1.0
   write_variability: 0.8
+  nb_files_per_read: 1
+  nb_files_per_write: 1
+  io_read_node_ratio: 0.1
+  io_write_node_ratio: 0.1
 storage:
   disk_templates:
     - &hdd_capa
