Adding script in CI for running functional test on each commit. Also fixing a typo in functional test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,3 +32,14 @@ test-job:
   tags:
     - build
  
+functional-test-job:
+  stage: test
+  script:
+    - cd functional_test
+    - pip install --user -r requirements.txt
+    - chmod u+x functional_test.py
+    - ./functional_test.py
+  dependencies:
+    - build-job
+  tags:
+    - simulation
