--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -90,7 +90,7 @@ build-job:
   artifacts:
     paths:
       - "build/"
-    expire_in: 2 day
+    expire_in: 2 days
 
 test-job:
   stage: test
@@ -122,4 +122,4 @@ functional-test-job:
     name: "$CI_COMMIT_REF_NAME-sim_log.txt"
     paths:
       - functional_test/simulation_logs.txt
-    expire_in: 2 weeks²
+    expire_in: 2 weeks
