--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   - build_deps
   - build
   - test
+  - calibration
 
 build_simgrid_v3.34:
   stage: build_deps
@@ -129,7 +130,7 @@ functional-test-job:
       - functional_test/simulation_logs.txt
     expire_in: 2 weeks
 
-calibration:
+calibration-job:
   stage: calibration
   script:
     - cd results
